--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,16 +28,20 @@
     "@radix-ui/react-switch": "^1.1.4",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.5",
+    "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@tailwindcss/vite": "^4.0.0",
     "@tanstack/react-table": "^8.20.6",
     "@tiptap/extension-blockquote": "^2.11.3",
     "@tiptap/extension-heading": "^2.11.3",
+    "@tiptap/extension-link": "^2.27.1",
     "@tiptap/extension-placeholder": "^2.11.3",
     "@tiptap/extension-task-item": "^2.11.3",
     "@tiptap/extension-task-list": "^2.11.3",
-    "@tiptap/react": "^2.11.3",
-    "@tiptap/starter-kit": "^2.11.3",
+    "@tiptap/extension-text-align": "^2.27.1",
+    "@tiptap/extension-underline": "^2.27.1",
+    "@tiptap/react": "^2.27.1",
+    "@tiptap/starter-kit": "^2.27.1",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
